--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,10 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="{{ '/about' | relative_url }}">About</a></li>
-        <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
-        <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
+        <li><a href="{{ '{{ site.baseurl }}/' | relative_url }}">Home</a></li>
+        <li><a href="{{ '{{ site.baseurl }}/about' | relative_url }}">About</a></li>
+        <li><a href="{{ '{{ site.baseurl }}/projects' | relative_url }}">Projects</a></li>
+        <li><a href="{{ '{{ site.baseurl }}/contact' | relative_url }}">Contact</a></li>
       </ul>
     </nav>
   </header>
