--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,13 +24,13 @@
 
         <ul>
           <li class="{% if page.url contains '/about' %}active{% endif %}">
-            <a href="{{ '/about' | relative_url }}">About</a>
+            <a href="{{ '/about' | relative_url }}">About Me</a>
           </li>
           <li class="{% if page.url contains '/projects' %}active{% endif %}">
-            <a href="{{ '/projects' | relative_url }}">Projects</a>
+            <a href="{{ '/projects' | relative_url }}">My Projects</a>
           </li>
           <li class="{% if page.url contains '/contact' %}active{% endif %}">
-            <a href="{{ '/contact' | relative_url }}">Contact</a>
+            <a href="{{ '/contact' | relative_url }}">Contact Me</a>
           </li>
         </ul>
 
