--- a/assets/style.css
+++ b/assets/style.css
@@ -518,21 +518,25 @@ pre, code { background:#0f1720; color:#f5f7fb; padding:6px 10px; border-radius:6
   border-radius: 3px;
 }
 
-/* Submenu styles */
-.sidebar ul .submenu {
+.submenu {
   list-style: none;
+  margin: 0;
   padding-left: 15px;
-  margin-top: 5px;
-  display: none; /* hidden by default */
+  display: none;
 }
 
-.sidebar ul .submenu li a {
-  font-size: 0.9em;
+.has-submenu.active > .submenu {
+  display: block;
+}
+
+/* Optional: style submenu links */
+.submenu li a {
+  font-size: 0.9rem;
   color: #ccc;
   text-decoration: none;
 }
 
-.sidebar ul .submenu li a:hover {
+.submenu li a:hover {
   color: #fff;
 }
 
